    (i.e. not a mapped class), will return element.alias() 
    instead of raising an error on AliasedClass.  [ticket:2018]

  - Session.merge() will check the version id of the incoming
    state against that of the database, assuming the mapping
    uses version ids and incoming state has a version_id
    assigned, and raise StaleDataError if they don't 
    match.  [ticket:2027]

- sql
  - Added NULLS FIRST and NULLS LAST support. It's implemented
    as an extension to the asc() and desc() operators, called
    nullsfirst() and nullslast().  [ticket:723]

  - The Index() construct can be created inline with a Table
    definition, using strings as column names, as an alternative
    to the creation of the index outside of the Table.

  - execution_options() on Connection accepts 
    "isolation_level" argument, sets transaction isolation
    level for that connection only until returned to the
    connection pool, for thsoe backends which support it
    (SQLite, Postgresql) [ticket:2001]

  - A TypeDecorator of Integer can be used with a primary key
    column, and the "autoincrement" feature of various dialects
    as well as the "sqlite_autoincrement" flag will honor
    the underlying database type as being Integer-based.
    [ticket:2005]

  - Established consistency when server_default is present
    on an Integer PK column.  SQLA doesn't pre-fetch these,
    nor do they come back in cursor.lastrowid (DBAPI).  
    Ensured all backends consistently return None 
    in result.inserted_primary_key for these. Regarding
    reflection for this case, reflection of an int PK col 
    with a server_default sets the "autoincrement" flag to False, 
    except in the case of a PG SERIAL col where we detected a 
    sequence default. [ticket:2020] [ticket:2021]

  - Result-row processors are applied to pre-executed SQL 
    defaults, as well as cursor.lastrowid, when determining
    the contents of result.inserted_primary_key.
    [ticket:2006]
