@@ -16,6 +16,11 @@ CHANGES
     assigned, and raise StaleDataError if they don't 
     match.  [ticket:2027]
 
+  - Session.connection(), Session.execute() accept 'bind',
+    to allow execute/connection operations to participate
+    in the open transaction of an engine explicitly.
+    [ticket:1996]
+
 - sql
   - Added NULLS FIRST and NULLS LAST support. It's implemented
     as an extension to the asc() and desc() operators, called
